SLING-4757 - fix pax exam memory setup and add test for non-markable stream
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/bundles/commons/contentdetection@1686179 13f79535-47bb-0310-9956-ffa450edef68